Refactor : 아이템 조회 상세 조회 service 구현